--- a/config.json
+++ b/config.json
@@ -1,19 +1,19 @@
 {
-    "ownerNumber": ["622150996855@s.whatsapp.net","622150996855@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/zeeoneofc",
-    "botName": "Haruka-Mdོ ",
-    "footer": "api.zeeoneofc.xyz",
+    "ownerNumber": ["201507384088@s.whatsapp.net","6281326024103@s.whatsapp.net"],
+    "ownerName": "GAARA SETYAWAN×፝֟͜×",
+    "instagram" : "https://instagram.com/gaara_xploite",
+    "botName": "𝐋𝐨𝐥𝐢𝐜𝐮 𝐁𝐨𝐭 ",
+    "footer": "github.com/gaara-ofc",
     "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
     "BotKey": "Gsyt6jRJ",
     "auto_welcomeMsg": true,
     "auto_leaveMsg": true,    
-    "autobio": true,
+    "autobio": false,
     "anticall": true,
     "autorespond": false,
     "autoblok212": true,
-    "autoread": true,
+    "autoread": false,
     "gamewaktu": 90,
     "limitCount": 25,
     "gcount": {
