--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Haruka-Md",
+  "name": "Lolicu-Md",
   "version": "9.0.1",
   "description": "whatsapp tob with multi device.",
   "main": "haruka.js",
